--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     width: 80%;
     max-width: 600px;
     display: flex;
-    background-color: blue;
+    background-color: #6F38C5;
     padding: 2rem;
 }
 .profile_image{
